src/test/ui/mismatched_types/similar_paths.stderr
error[E0308]: mismatched types
  --> $DIR/similar_paths.rs:7:5
   |
LL | pub fn foo() -> Option<u8> {
   |                 ---------- expected `Option<u8>` because of return type
LL |     Some(42_u8)
   |     ^^^^^^^^^^^ expected enum `Option`, found enum `std::option::Option`
   |
   = note: enum `std::option::Option` and enum `Option` have similar names, but are actually distinct types
note: enum `std::option::Option` is defined in crate `core`
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
LL | pub enum Option<T> {
   | ^^^^^^^^^^^^^^^^^^
note: enum `Option` is defined in the current crate
  --> $DIR/similar_paths.rs:1:1
   |
LL | enum Option<T> {
   | ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
